--- a/12P-Anh-Tai/Home.html
+++ b/12P-Anh-Tai/Home.html
@@ -63,7 +63,7 @@
                     <li><a href="Content/ThoiKhoaBieu.html" target="noidung">Thời Khoá Biểu</a></li>
                     <li><a href="Content/gioithieu.html" target="noidung">Giới thiệu bản thân</a></li>
                     <li><a href="Content/ttnt.html" target="noidung"> Ngành trí tuệ nhân tạo</a></li>
-                    
+                    <li><a href="Content/bai7_nv1.html" target="noidung"> góp ý kiến </a></li>
                 </ol>
             </td>
             <td    
